--- a/Lab15/Lab15/Views/TodoItemPage.xaml
+++ b/Lab15/Lab15/Views/TodoItemPage.xaml
@@ -4,12 +4,19 @@
              x:Class="Lab15.Views.TodoItemPage">
     <ContentPage.Content>
         <StackLayout Margin="20">
-            <Label Text="Name"/>
-            <Entry Text="{Binding Path=Name}" Placeholder="Enter item"/>
-            <Label Text="Notes"/>
-            <Entry Text="{Binding Path=Notes}" Placeholder="Enter notes"/>
-            <Label Text="Done"/>
-            <Switch IsToggled="{Binding Path=Done}"/>
+
+            <Label Text="Ubication"/>
+            <Entry Text="{Binding Path=ubication}" Placeholder="Enter ubication"/>
+
+            <Label Text="Telephone"/>
+            <Entry Text="{Binding Path=telephone}" Placeholder="Enter Telephone"/>
+
+            <Label Text="Specialization Quantity"/>
+            <Entry Text="{Binding Path=specializationQuantity}" Placeholder="Enter Specialization quantity"/>
+
+            <DatePicker Date="{Binding Path=createDate}"/>
+            <!--<Switch IsToggled="{Binding Path=Done}"/>-->
+
             <Button Text="Save"
                     Clicked="OnSaveButtonClicked" />
             <Button Text="Delete"
